SERVER-12956: on startup, remove half built indexes